<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btn_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_rock" />

    <Button
        android:id="@+id/btn_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scissors"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_paper" />

</androidx.constraintlayout.widget.ConstraintLayout>